Modify collatz_sequence.ipynb and collatz_sequence.py

--- a/collatz_sequence.ipynb
+++ b/collatz_sequence.ipynb
@@ -2,18 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "c9c6dcf6",
+   "execution_count": 15,
+   "id": "cf4b0402",
    "metadata": {},
    "outputs": [],
    "source": [
     "def collatzSequence(number):\n",
-    "    # Return a collazSequence\n",
     "    \n",
-    "    if number == 1: \n",
-    "        return\n",
-    "    \n",
-    "    elif number <= 0:\n",
+    "    if number == 1 or number <= 0:\n",
     "        return\n",
     "    \n",
     "    if number % 2 == 0:\n",
@@ -29,14 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "1bbc818b",
+   "execution_count": 19,
+   "id": "ac344ced",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Enter any digit: g\n",
+      "invalid literal for int() with base 10: 'g'\n",
       "Enter any digit: 26\n",
       "13\n",
       "40\n",
@@ -52,10 +50,23 @@
     }
    ],
    "source": [
-    "n = int(input('Enter any digit: '))\n",
-    "\n",
-    "collatzSequence(n)"
+    "try:\n",
+    "    n = int(input('Enter any digit: '))\n",
+    "    collatzSequence(n)\n",
+    "    \n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    n = int(input('Enter any digit: '))\n",
+    "    collatzSequence(n)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "007e28af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
